# faebot

./: .gitignore  Cargo.toml  LICENSE  README.md
.sqlx/: query-44914538f1733b09f794d5e445de01bc0f344dfc3f385358c190b817561d05e8.json  query-c464441d8e8012deecdb30d7e4b8b0b3476bc150fde33ff2667d3b5bcaf98a0b.json
migrations/: 0_init_db.sql
src/: characters.rs  commands.rs  fudge_dice.rs  lib.rs  main.rs  utilities.rs
src/characters/: mod.rs
