[package]
name = "faebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
itertools = "0.12.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
log = "0.4.20"
